k8s/new-cluster/overlays/aks/postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999  # postgres user in postgis image
        runAsGroup: 999
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: postgres
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 999
          runAsGroup: 999
          seccompProfile:
            type: RuntimeDefault
